.: WSM: Task: Update package description (WSM-170)
.: WSM: Task: Update catalogue items when navigate to them (WSM-164)
.: WSM: BugFix: Submenu is hidden when hovering (WSM-58)
.: WSM: BugFix: QR code icon not working in firefox (WSM-165)
.: WSM: BugFix: Submenu display position issue (WSM-58)
.: WSM: BugFix: Refresh numbers when navigate between categories (WSM-164)

---------------------------------------------
- 2020-07-18                                -
---------------------------------------------
.: WSM: Task: Create free trial package page (WSM-170)

---------------------------------------------
- 2020-07-13                                -
---------------------------------------------
.: WSM: Task: Put image to icon (WSM-48)
.: WSM: BugFix: When image has been changed in settings, switching to other page doesn't update the details (WSM-164)

---------------------------------------------
- 2020-07-12                                -
---------------------------------------------
.: WSM: Task: Improve the Navigation Sidebar in order to view sub items (WSM-58)

- v1.0.1030                                 -
---------------------------------------------
- 2020-07-12                                -
---------------------------------------------
.: WSM: Task: Update sentences (WSM-159)
.: WSW: Task: Update home icon (WSW-69)
.: WSM: BugFix: Fix the button margin (WSM-83)
.: WSM: BugFix: Error is occurred when inserting page information (WSM-160)

---------------------------------------------
- 2020-07-11                                -
---------------------------------------------
.: WSM: Story: Quick Menu (WSM-158)

---------------------------------------------
- 2020-07-10                                -
---------------------------------------------
.: WSW: Task: QR code icon is not clear (WSW-69)

---------------------------------------------
- 2020-07-09                                -
---------------------------------------------