@@ -1,1 +1,1 @@
-<package-list [selected]="package"></package-list>
+<package-list [selected]="package" [loading]="loading.isRunning()"></package-list>
